src/deployment/react-spring-boot-example-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: react-spring-boot-example-ingress
  annotations: 
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: "nginx"
  rules:
  - host: spring-boot-rest-example.com
    http:
      paths:
      - path: /(.*)
        pathType: Prefix  
        backend:
          service:
            name: react-example-service
            port: 
              number: 3000
      - path: /api(.*)
        pathType: Prefix  
        backend:
          service:
            name: spring-boot-rest-example-service
            port: 
              number: 8080
